[package]
name = "logging"
version = "0.0.1"
edition = "2024"

[features]
otlp = ["dep:opentelemetry-otlp"]
stdout = ["dep:opentelemetry-stdout"]

[dependencies]
configs = { git = "ssh://git@github.com/ruskit/configs.git", rev = "v0.0.0" }

tracing-bunyan-formatter = { version = "0.3.10" }
tracing-opentelemetry = { version = "0.30.0" }
opentelemetry = { version = "0.29.1" }
opentelemetry_sdk = { version = "0.29.0", features = ["logs"] }
opentelemetry-appender-tracing = { version = "0.29.1"}
tracing-subscriber = { version = "0.3.19", features = ["env-filter","registry", "std", "fmt"]  }
tracing-log = { version = "0.2.0" }
tracing = { version = "0.1.41" }
thiserror = { version = "2.0.12" }

opentelemetry-stdout = { version = "0.29.0", features = ["logs"], optional = true}
opentelemetry-otlp = { version = "0.29.0", features = ["logs", "grpc-tonic", "tls", "tls-roots"], optional = true }
